--- a/master peace ajloun/adminDashboard/index.html
+++ b/master peace ajloun/adminDashboard/index.html
@@ -81,6 +81,8 @@
                     <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Services</a>
                     <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Users</a>
                     <a href="Contact.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Contact</a>
+                    <a href="Join.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Join</a>
+
                     <!-- <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Charts</a> -->
                     <!-- <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>Pages</a>
