--- a/master peace ajloun/adminDashboard/index.html
+++ b/master peace ajloun/adminDashboard/index.html
@@ -80,8 +80,10 @@
                     <!-- <a href="widget.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Widgets</a> -->
                     <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Services</a>
                     <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Users</a>
+                    <a href="Offers.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Offers</a>
                     <a href="Contact.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Contact</a>
                     <a href="Join.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Join</a>
+
 
                     <!-- <a href="chart.html" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>Charts</a> -->
                     <!-- <div class="nav-item dropdown">
