--- a/master peace ajloun/offers.html
+++ b/master peace ajloun/offers.html
@@ -94,6 +94,20 @@
 			margin-bottom: 3%;
 			padding-bottom: 3%;
 		}
+		/* Style for the original price with a line through */
+		.original-price {
+		text-decoration: line-through;
+		text-decoration-thickness: 3px; /* Increase the thickness of the line */
+		color: #888; /* Optional: Light grey color for the original price */
+		margin-right: 10px; /* Optional: Add space between old and new price */
+		}
+
+		/* Style for the discounted price */
+		.discounted-price {
+		font-weight: bold;
+		color: #e74c3c; /* Optional: Red color for the discounted price */
+		}
+
 		
 	</style>
 </head>
