--- a/master peace ajloun/offers.html
+++ b/master peace ajloun/offers.html
@@ -41,6 +41,72 @@
 			font-size: 24px;
 			cursor: pointer;
 		}
+
+		
+    .booking-modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.5);
+    }
+
+    .modal-content {
+      background-color: white;
+      margin: 15% auto;
+      padding: 20px;
+      border-radius: 5px;
+      width: 80%;
+      max-width: 500px;
+      position: relative;
+    }
+
+    .close-modal {
+      position: absolute;
+      right: 10px;
+      top: 10px;
+      font-size: 24px;
+      cursor: pointer;
+    }
+
+    .form-group {
+      margin-bottom: 15px;
+    }
+
+    .form-group label {
+      display: block;
+      margin-bottom: 5px;
+    }
+
+    .form-group input {
+      width: 100%;
+      padding: 8px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+    }
+
+    .total-amount {
+      margin: 15px 0;
+      font-weight: bold;
+    }
+
+    .submit-booking {
+      background-color: #fa9e1b;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      width: 100%;
+    }
+
+    .submit-booking:hover {
+      background-color: #e89016;
+    }
+
 	</style>
 </head>
 
@@ -388,25 +454,6 @@
 
 				
 
-<!-- Booking Popup Form -->
-<div id="bookingPopup5" class="popup5">
-	<div class="popup-content5">
-		<span class="close" onclick="closeBookingPopup()">&times;</span>
-		<h2>Book this Tour</h2>
-		<form id="bookingForm">
-			<label for="fullName">Full Name:</label>
-			<input type="text" id="fullName" name="fullName" required>
-
-			<label for="email">Email:</label>
-			<input type="email" id="email" name="email" required>
-
-			<label for="phone">Phone:</label>
-			<input type="text" id="phone" name="phone" required>
-
-			<button type="submit">Submit Booking</button>
-		</form>
-	</div>
-</div>
 
 
 
