--- a/master peace ajloun/login.html
+++ b/master peace ajloun/login.html
@@ -67,8 +67,8 @@
                                 <ul class="social_list">
                                     <li class="social_list_item">
                                         <!-- <a href="#">
-                                  <i class="fa fa-pinterest" aria-hidden="true"></i>
-                                </a> -->
+                                <i class="fa fa-pinterest" aria-hidden="true"></i>
+                              </a> -->
                                     </li>
                                     <li class="social_list_item">
                                         <a href="#">
@@ -197,7 +197,7 @@
         </div>
 
 
-       
+
 
 
 
@@ -511,60 +511,8 @@
     <script src="plugins/parallax-js-master/parallax.min.js"></script>
     <script src="js/about_custom.js"></script>
     <script src="js/login.js"></script>
-    <script>
+    <script src="js/Shard.js"></script>
 
-        // Check if JWT is in local storage
-        document.addEventListener("DOMContentLoaded", function () {
-            // Check if the element with ID 'userBox' exists
-            const userBox = document.getElementById('userBox');
-
-            if (userBox) {
-                // Check if JWT is in local storage
-                const token = localStorage.getItem('jwt');
-
-                if (token) {
-                    // If user is logged in (JWT token found), show profile link
-                    userBox.innerHTML = `
-                            <a href="edit_profile.html" id ="profile_icon">Profile</a>         
-                            <small style="color: whitesmoke;">|</small>
-                            <div class="user_box_link">
-                                <a href="#" id="logoutButton">Logout</a>
-                            </div>
-                        `;
-
-                    // Attach logout functionality to the "Logout" button
-                    document.getElementById('logoutButton').addEventListener('click', function (event) {
-                        event.preventDefault(); // Prevent default link behavior
-                        logout();
-                    });
-                } else {
-
-                    userBox.innerHTML = `
-                            <div class="user_box_login user_box_link">
-                                <a href="login.html">Login</a>
-                            </div>
-                            <div class="user_box_register user_box_link">
-                                <a href="login.html">Register</a>
-                            </div>
-                        `;
-                }
-            } else {
-                console.error("Element with ID 'userBox' not found.");
-            }
-        });
-
-        function logout() {
-            localStorage.removeItem('jwt');
-
-            alertify.success("Logged out successfully!");
-
-            setTimeout(() => {
-                window.location.reload();
-            }, 1000);
-        }
-
-
-    </script>
 </body>
 
 </html>
