--- a/master peace ajloun/offers.html
+++ b/master peace ajloun/offers.html
@@ -687,6 +687,8 @@
 	<script src="plugins/parallax-js-master/parallax.min.js"></script>
 	<script src="js/offers_custom.js"></script>
 	<script src="js/OffersApi.js"></script>
+	<script src="js/Shard.js"></script>
+
 </body>
 
 </html>
