--- a/master peace ajloun/single_listing.html
+++ b/master peace ajloun/single_listing.html
@@ -888,6 +888,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <script src="plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCIwF204lFZg1y4kPSIhKaHEXMLYxxuMhA"></script>
 <script src="js/single_listing_custom.js"></script>
+	<script src="js/Shard.js"></script>
 
 </body>
 
