--- a/master peace ajloun/edit_profile.html
+++ b/master peace ajloun/edit_profile.html
@@ -36,6 +36,12 @@
     <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/kMVqEV6CO2L1ghX6h72Drp9Wj9j9FXae7dsykM0HpxBvTH0nKsK5qv9V/OsA+yWzHwxqprK0rjECg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <script src="js/ProfileApi.js"></script>
     <style>
