--- a/master peace ajloun/single_listing.html
+++ b/master peace ajloun/single_listing.html
@@ -14,6 +14,14 @@
 <link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/animate.css">
 <link rel="stylesheet" type="text/css" href="styles/single_listing_styles.css">
 <link rel="stylesheet" type="text/css" href="styles/single_listing_responsive.css">
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css" />
+<script src="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+	integrity="sha512-Fo3rlrZj/kMVqEV6CO2L1ghX6h72Drp9Wj9j9FXae7dsykM0HpxBvTH0nKsK5qv9V/OsA+yWzHwxqprK0rjECg=="
+	crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
