--- a/master peace ajloun/edit_profile.html
+++ b/master peace ajloun/edit_profile.html
@@ -191,7 +191,7 @@
                                     <li class="main_nav_item">
                                         <a href="contact.html">contact</a>
                                     </li>
-                                    <li class="main_nav_item"><a href="book.html">booking</a></li>
+                                    <li class="main_nav_item"><a href="offers.html">Offers</a></li>
                                 </ul>
                             </div>
                             <div class="content_search ml-lg-0 ml-auto">
