--- a/master peace ajloun/about.html
+++ b/master peace ajloun/about.html
@@ -101,9 +101,8 @@
                   <li class="main_nav_item">
                     <a href="services.html">services</a>
                   </li>
-                  <li class="main_nav_item"><a href="#">about us</a></li>
                   <li class="main_nav_item">
-                    <a href="contact.html">contact</a>
+                    <a href="contact.html">contact us</a>
                   </li>
                   <!-- <li class="main_nav_item"><a href="blog.html">news</a></li> -->
                 </ul>
