--- a/master peace ajloun/contact.html
+++ b/master peace ajloun/contact.html
@@ -97,11 +97,10 @@
                   <li class="main_nav_item">
                     <a href="services.html">services</a>
                   </li>
-                  <li class="main_nav_item"><a href="#">about us</a></li>
+                  <li class="main_nav_item"><a href="about.html">about us</a></li>
                   <li class="main_nav_item">
-                    <a href="contact.html">contact</a>
+                    <a href="join_us.html">join us</a>
                   </li>
-                  <!-- <li class="main_nav_item"><a href="blog.html">news</a></li> -->
                 </ul>
               </div>
               <div class="content_search ml-lg-0 ml-auto">
@@ -156,7 +155,7 @@
 
           <li class="menu_item"><a href="contact.html">Contact Us</a></li>
           <li class="menu_item"><a href="about.html">About Us</a></li>
-          <!-- <li class="menu_item"><a href="offers.html">offers</a></li> -->
+          <li class="menu_item"><a href="offers.html">offers</a></li>
         </ul>
       </div>
     </div>
