--- a/master peace ajloun/index.html
+++ b/master peace ajloun/index.html
@@ -250,7 +250,7 @@
           <!-- Slider Item -->
           <div class="owl-item home_slider_item">
             <a href="">
-              <div class="home_slider_background" style="background-image: url(image2/EunO-38XcAM0QW8.jfif)"></div>
+              <div class="home_slider_background" style="background-image: url(image2/test7.jpg)"></div>
             </a>
             <div class="home_slider_content text-center">
               <div class="home_slider_content_inner" data-animation-in="flipInX"
@@ -367,7 +367,7 @@
                 class="search_panel_content d-flex flex-lg-row flex-column align-items-lg-center align-items-center justify-content-lg-evenly justify-content-center">
                 <div class="search_item">
                   <div>destination</div>
-                  <input style="width: 40em;"  type="text" class="destination search_input" required="required">
+                  <input style="width: 40em;" type="text" class="destination search_input" required="required">
                 </div>
                 <!-- <div class="search_item">
                   <div>check in</div>
@@ -722,7 +722,7 @@
                 <div class="row g-0">
                   <div class="col-lg-12">
                     <div class="rounded mb-4">
-                      <img src="image2/51680975656_41cdf1c761_h.jpg" class="img-fluid rounded w-100" alt="">
+                      <img src="image2/test5.jpg" class="img-fluid rounded w-100" alt="">
                     </div>
                     <div class="row gx-4 gy-0">
                       <div class="col-6">
@@ -756,7 +756,7 @@
               </div>
               <div class="rounded bg-primary p-4 position-absolute d-flex justify-content-center"
                 style="width: 90%; height: 80px; top: -40px; left: 50%; transform: translateX(-50%);">
-                <h3 class="mb-0 text-white">2 Years Experiance</h3>
+                <h3 class="mb-0 text-white">Online Booking Platform</h3>
               </div>
             </div>
           </div>
@@ -770,7 +770,7 @@
     <div class="container-fluid service py-5">
       <div class="container service-section py-5">
         <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
-          <h4 class="text-primary">Our Services Details</h4>
+          <h4 class="text-primary" style="color: white !important">Our Services Details</h4>
           <h1 class="display-5 text-white mb-4">Explore Ajloun Tour Services</h1>
           <p class="mb-0 text-white">Discover Ajloun’s treasures through tailored tours, where history, nature, and
             adventure come together. Whether you're
@@ -788,11 +788,11 @@
               </div>
               <div class="py-2 border-bottom d-flex align-items-center justify-content-between flex-shrink-1 flex-wrap">
                 <h4 class="mb-0 pb-2 pb-sm-0"></h4>
-                <p class="mb-0"><i class="fas fa-clock text-primary me-2"></i></p>
+                <p class="mb-0"><i class="fas fa-clock me-2"></i></i></p>
               </div>
               <div class="py-2 border-bottom d-flex align-items-center justify-content-between flex-shrink-1 flex-wrap">
                 <h4 class="mb-0"></h4>
-                <p class="mb-0"><i class="fas fa-clock text-primary me-2"></i></p>
+                <p class="mb-0"><i class="fas fa-clock me-2"></i></p>
               </div>
             </div>
           </div>
@@ -805,7 +805,8 @@
                   <i class="fas fa-home fa-4x"></i>
                 </div>
                 <a href="#" class="h4 d-inline-block mb-3">Private Tour Guides</a>
-                <p class="mb-0">Enjoy a customized experience with knowledgeable local guides who will take you through
+                <p class="mb-0" style="text-align: start;">Enjoy a customized experience with knowledgeable local guides
+                  who will take you through
                   Ajloun’s most iconic sites.
                 </p>
               </div>
@@ -818,7 +819,8 @@
                   <i class="fas fa-utensils fa-4x"></i>
                 </div>
                 <a href="#" class="h4 d-inline-block mb-3">Delicious Food</a>
-                <p class="mb-0">Savor delicious, authentic Jordanian food during your tour, with meals prepared fresh
+                <p class="mb-0" style="text-align: start;">Savor delicious, authentic Jordanian food during your tour,
+                  with meals prepared fresh
                   for you at local eateries.
                 </p>
               </div>
@@ -831,7 +833,8 @@
                   <i class="fa-solid fa-gift" style="font-size: 50px;"></i>
                 </div>
                 <a href="#" class="h4 d-inline-block mb-3"> Souvenirs</a>
-                <p class="mb-0">ake home a piece of Ajloun with you—each tour includes unique, locally crafted souvenirs
+                <p class="mb-0" style="text-align: start;">ake home a piece of Ajloun with you—each tour includes
+                  unique, locally crafted souvenirs
                   to remember your visit.
                 </p>
               </div>
@@ -844,7 +847,8 @@
                   <i class="fa-solid fa-person-hiking" style="font-size: 50px;"></i>
                 </div>
                 <a href="#" class="h4 d-inline-block mb-3">Nature Hikes</a>
-                <p class="mb-0">Experience the beauty of Ajloun’s landscapes with peaceful nature hikes, all tailored to
+                <p class="mb-0" style="text-align: start;">Experience the beauty of Ajloun’s landscapes with peaceful
+                  nature hikes, all tailored to
                   your pace.
                 </p>
               </div>
@@ -863,7 +867,7 @@
     <div class="container-fluid attractions py-5">
       <div class="container attractions-section py-5">
         <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
-          <h4 class="text-primary">Attractions</h4>
+          <h4 class="text-primary" style="color: white !important">Attractions</h4>
           <h1 class="display-5 text-white mb-4">Explore Ajloun's Top Attractions</h1>
           <p class="text-white mb-0">Discover the breathtaking beauty of Ajloun's natural landscapes and historical
             landmarks. From the majestic Ajloun
@@ -1163,6 +1167,7 @@
       </div>
     </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
 
     <!-- JavaScript Libraries -->
