--- a/master peace ajloun/join_us.html
+++ b/master peace ajloun/join_us.html
@@ -114,9 +114,8 @@
                                         <a href="about.html">about us</a>
                                     </li>
                                     <li class="main_nav_item">
-                                        <a href="contact.html">contact us</a>
+                                        <a href="offers.html">offers</a>
                                     </li>
-                                    <!-- <li class="main_nav_item"><a href="offers.html">offers</a></li> -->
                                 </ul>
                             </div>
                             <div class="content_search ml-lg-0 ml-auto">
@@ -211,19 +210,19 @@
             <div class="row text-center mb-4">
                 <div class="col-md-3">
                     <a href=""><i class="bi bi-geo-alt fs-1 text-primary"></i></a>
-                    <p>Address: Ajloun</p>
+                    <p>Address: Ajloun, Jordan</p>
                 </div>
                 <div class="col-md-3">
                     <a href=""><i class="bi bi-telephone fs-1 text-primary"></i></a>
-                    <p>Phone: +1235 2355 98</p>
+                    <p>Phone: 0782347393</p>
                 </div>
                 <div class="col-md-3">
                     <a href=""><i class="bi bi-envelope fs-1 text-primary"></i></a>
-                    <p>Email: info@yoursite.com</p>
+                    <p>Email: AjlounTour@gmail.com</p>
                 </div>
                 <div class="col-md-3">
                     <a href=""><i class="bi bi-globe fs-1 text-primary"></i></a>
-                    <p>Website: yoursite.com</p>
+                    <p>Website: ajlountour.com</p>
                 </div>
             </div>
             <div class="row">
