--- a/master peace ajloun/login.html
+++ b/master peace ajloun/login.html
@@ -242,8 +242,8 @@
                         </div>
                         <span>or use your account</span> -->
                         <br><br>
-                        <input placeholder="User Name" type="text" required="" name="UserName" id="loginUsername">
-                        <input type="password" placeholder="Password" required="" name="Password2" id="loginPassword" />
+                        <input placeholder="Email Adderss" type="text" required="" name="UserName" id="loginUsername">
+                        <input type="password" placeholder="Password" required="" name="Password2" minlength="6" id="loginPassword" />
                         <a href="#">Forgot your password?</a>
                         <button type="submit">Sign In</button>
                     </form>
