--- a/master peace ajloun/services.html
+++ b/master peace ajloun/services.html
@@ -116,11 +116,11 @@
                                         <a href="index.html">home</a>
                                     </li>
                                     <li class="main_nav_item">
-                                        <a href="about.html"> about us </a>
-                                    </li>
-                                    <li class="main_nav_item">
                                         <a href="contact.html"> contact us
                                         </a>
+                                    </li>
+                                    <li class="main_nav_item">
+                                        <a href="offers.html"> offers </a>
                                     </li>
                                     <li class="main_nav_item">
                                         <a href="join_us.html">Join Us</a>
