--- a/master peace ajloun/contact.html
+++ b/master peace ajloun/contact.html
@@ -215,7 +215,7 @@
             <div class="about_content">
               <div class="logo_container about_logo">
                 <div class="logo">
-                  <a href="#"><img src="image/alogo.png" alt="" /></a>
+                  <a href="#" ><img src="image/alogo.png" alt="" ></a>
                 </div>
               </div>
               <p class="about_text">
