--- a/master peace ajloun/adminDashboard/form.html
+++ b/master peace ajloun/adminDashboard/form.html
@@ -296,7 +296,7 @@
                                 </div>
                                 <div class="mb-3">
                                     <label for="dates" class="form-label">Date</label>
-                                    <input type="date" class="form-control" id="dates">
+                                    <input type="date" class="form-control" id="Dates">
                                 </div>
                                 <div class="mb-3">
                                     <label for="imageFile" class="form-label">Upload Image</label>
